# rk3588-yolov8n

./: .gitattributes  .gitignore  README.md  acceptance_report.md  deploy_guide.md  ops_runbook.md  requirements.txt
app/: __init__.py  config.py  main.py  types.py
app/capture/: __init__.py  camera.py
app/infer/: __init__.py  engine.py  multi_process.py  multi_thread.py  native_engine.py
app/rules/: __init__.py  engine.py
app/storage/: __init__.py  events.py
app/web/: __init__.py  server.py
configs/: config.example.yaml  config_yolo11m.yaml  config_yolo11s.yaml
native/: CMakeLists.txt  build.sh  rknn_infer.cpp  rknn_infer.h
scripts/: 00_baseline_check.sh  convert_yolo11.py  debug_yolo11_output.py  healthcheck.sh  profile_infer.py  run.sh  sample_infer_100.py  test_async.py  test_multi_thread.py  test_native.py  test_pipeline.py
tests/: test_infer_decode.py  test_rules.py  test_storage.py  test_yolo11_decode.py
